--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -3,5 +3,6 @@
   "Страница не найдена": "Page not found",
   "Произошла непредвиденная ошибка": "Something went wrong",
   "Обновить страницу": "Reload page",
-  "throw error": "throw error"
+  "throw error": "throw error",
+  "Переключить": "Toggle"
 }
