--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -4,5 +4,8 @@
   "Произошла непредвиденная ошибка": "Something went wrong",
   "Обновить страницу": "Reload page",
   "throw error": "throw error",
-  "Переключить": "Toggle"
+  "Переключить": "Toggle",
+  "Короткий язык": "En",
+  "О сайте": "About us",
+  "Главная": "Main page"
 }
