--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -4,5 +4,8 @@
   "Произошла непредвиденная ошибка": "Произошла непредвиденная ошибка",
   "Обновить страницу": "Обновить страницу",
   "throw error": "Выбросить ошибку",
-  "Переключить": "Переключить"
+  "Переключить": "Переключить",
+  "Короткий язык": "Ru",
+  "О сайте": "О сайте",
+  "Главная": "Главная страница"
 }
