--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -7,5 +7,6 @@
   "Переключить": "Toggle",
   "Короткий язык": "En",
   "О сайте": "About us",
-  "Главная": "Main page"
+  "Главная": "Main page",
+  "Войти": "Login"
 }
