--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -7,5 +7,6 @@
   "Переключить": "Переключить",
   "Короткий язык": "Ru",
   "О сайте": "О сайте",
-  "Главная": "Главная страница"
+  "Главная": "Главная страница",
+  "Войти": "Войти"
 }
