--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -8,5 +8,7 @@
   "Короткий язык": "Ru",
   "О сайте": "О сайте",
   "Главная": "Главная страница",
-  "Войти": "Войти"
+  "Войти": "Войти",
+  "decrement": "декремент",
+  "increment": "инкремент"
 }
