Add login, add form ui

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -10,5 +10,7 @@
   "Главная": "Main page",
   "Войти": "Login",
   "decrement": "decrement",
-  "increment": "increment"
+  "increment": "increment",
+  "Введите username": "Enter username",
+  "Введите пароль": "Enter password"
 }
