--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -10,5 +10,7 @@
   "Главная": "Главная страница",
   "Войти": "Войти",
   "decrement": "декремент",
-  "increment": "инкремент"
+  "increment": "инкремент",
+  "Введите username": "Введите username",
+  "Введите пароль": "Введите пароль"
 }
