Add profile, optimization render

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -15,5 +15,6 @@
   "Введите пароль": "Enter password",
   "Форма авторизации": "Authorization form",
   "Вы ввели неправильный логин или пароль": "Incorrect username or password",
-  "Выйти": "Выйти"
+  "Выйти": "Log out",
+  "Профиль": "Profile"
 }
