--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -7,7 +7,7 @@
   "Переключить": "Переключить",
   "Короткий язык": "Ru",
   "О сайте": "О сайте",
-  "Главная": "Главная страница",
+  "Главная": "Главная",
   "Войти": "Войти",
   "decrement": "декремент",
   "increment": "инкремент",
@@ -15,5 +15,6 @@
   "Введите пароль": "Введите пароль",
   "Форма авторизации": "Форма авторизации",
   "Вы ввели неправильный логин или пароль": "Вы ввели неправильный логин или пароль",
-  "Выйти": "Выйти"
+  "Выйти": "Выйти",
+  "Профиль": "Профиль"
 }
