--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -16,5 +16,6 @@
   "Форма авторизации": "Форма авторизации",
   "Вы ввели неправильный логин или пароль": "Вы ввели неправильный логин или пароль",
   "Выйти": "Выйти",
-  "Профиль": "Профиль"
+  "Профиль": "Профиль",
+  "Страна": "Страна"
 }
