--- a/public/locales/ru/profile.json
+++ b/public/locales/ru/profile.json
@@ -2,5 +2,15 @@
   "Профиль": "Профиль",
   "Редактировать": "Редактировать",
   "Ваше имя": "Ваше имя",
-  "Ваша фамилия": "Ваша фамилия"
+  "Ваша фамилия": "Ваша фамилия",
+  "Произошла ошибка при загрузке профиля": "Произошла ошибка при загрузке профиля",
+  "Попробуйте перезагрузить страницу": "Попробуйте перезагрузить страницу",
+  "Сохранить": "Сохранить",
+  "Отменить": "Отменить",
+  "Возраст": "Ваш возраст",
+  "Город": "Город",
+  "Аватар": "Аватар",
+  "Имя пользователя": "Имя пользователя",
+  "Валюта": "Валюта",
+  "Страна": "Страна"
 }
