--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -17,5 +17,10 @@
   "Вы ввели неправильный логин или пароль": "Вы ввели неправильный логин или пароль",
   "Выйти": "Выйти",
   "Профиль": "Профиль",
-  "Страна": "Страна"
+  "Страна": "Страна",
+  "Имя и фамилия обязательны": "Имя и фамилия обязательны",
+  "Некорректный возраст": "Некорректный возраст",
+  "Город обязателен": "Город обязателен",
+  "Внутренняя ошибка сервера": "Внутренняя ошибка сервера",
+  "Данные не указаны": "Данные не указаны"
 }
