--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -22,5 +22,6 @@
   "Некорректный возраст": "Некорректный возраст",
   "Город обязателен": "Город обязателен",
   "Внутренняя ошибка сервера": "Внутренняя ошибка сервера",
-  "Данные не указаны": "Данные не указаны"
+  "Данные не указаны": "Данные не указаны",
+  "Статьи": "Статьи"
 }
