Add comment list

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -22,5 +22,6 @@
   "Город обязателен": "City is required",
   "Внутренняя ошибка сервера": "Server error",
   "Данные не указаны": "There is no data",
-  "Статьи": "Articles"
+  "Статьи": "Articles",
+  "Комментарии отсутствуют": "Комментарии отсутствуют"
 }
