--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -23,5 +23,6 @@
   "Город обязателен": "Город обязателен",
   "Внутренняя ошибка сервера": "Внутренняя ошибка сервера",
   "Данные не указаны": "Данные не указаны",
-  "Статьи": "Статьи"
+  "Статьи": "Статьи",
+  "Комментарии отсутствуют": "Комментарии отсутствуют"
 }
