--- a/public/locales/en/article-details.json
+++ b/public/locales/en/article-details.json
@@ -1,4 +1,5 @@
 {
   "Статья не найдена": "Article not found",
-  "Произошла ошибка при загрузке статьи": "There was an error with article loading"
+  "Произошла ошибка при загрузке статьи": "There was an error with article loading",
+  "Комментарии": "Комментарии"
 }
