Add en commments translation

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -23,5 +23,5 @@
   "Внутренняя ошибка сервера": "Server error",
   "Данные не указаны": "There is no data",
   "Статьи": "Articles",
-  "Комментарии отсутствуют": "Комментарии отсутствуют"
+  "Комментарии отсутствуют": "There are no comments yet"
 }
