--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -24,5 +24,7 @@
   "Внутренняя ошибка сервера": "Внутренняя ошибка сервера",
   "Данные не указаны": "Данные не указаны",
   "Статьи": "Статьи",
-  "Комментарии отсутствуют": "Комментарии отсутствуют"
+  "Комментарии отсутствуют": "Комментарии отсутствуют",
+  "Введите текст комментария": "Введите текст комментария",
+  "Отправить": "Отправить"
 }
