add filters, sort, search

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -25,5 +25,18 @@
   "Статьи": "Articles",
   "Комментарии отсутствуют": "There are no comments yet",
   "Введите текст комментария": "Enter comment text",
-  "Отправить": "Send"
+  "Отправить": "Send",
+  "Поиск": "Поиск",
+  "возрастанию": "возрастанию",
+  "убыванию": "убыванию",
+  "по ": "по ",
+  "дата создания": "дата создания",
+  "дате создания": "дате создания",
+  "названию": "названию",
+  "просмотрам": "просмотрам",
+  "Экономика": "Экономика",
+  "Айти": "Айти",
+  "Наука": "Наука",
+  "Все": "Все",
+  "Все статьи": "Все статьи"
 }
