--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -26,5 +26,18 @@
   "Статьи": "Статьи",
   "Комментарии отсутствуют": "Комментарии отсутствуют",
   "Введите текст комментария": "Введите текст комментария",
-  "Отправить": "Отправить"
+  "Отправить": "Отправить",
+  "Поиск": "Поиск",
+  "возрастанию": "возрастанию",
+  "убыванию": "убыванию",
+  "по ": "по ",
+  "дата создания": "дата создания",
+  "дате создания": "дате создания",
+  "названию": "названию",
+  "просмотрам": "просмотрам",
+  "Экономика": "Экономика",
+  "Айти": "Айти",
+  "Наука": "Наука",
+  "Все": "Все",
+  "Все статьи": "Все статьи"
 }
