add recommendation articles for article details page

--- a/public/locales/en/article-details.json
+++ b/public/locales/en/article-details.json
@@ -1,5 +1,7 @@
 {
   "Статья не найдена": "Article not found",
   "Произошла ошибка при загрузке статьи": "There was an error with article loading",
-  "Комментарии": "Comments"
+  "Комментарии": "Comments",
+  "Рекомендуем": "Рекомендуем",
+  "Назад к списку": "Назад к списку"
 }
