--- a/public/locales/ru/article-details.json
+++ b/public/locales/ru/article-details.json
@@ -2,4 +2,6 @@
   "Статья не найдена": "Статья не найдена",
   "Произошла ошибка при загрузке статьи": "Произошла ошибка при загрузке статьи",
   "Комментарии": "Комментарии",
+  "Рекомендуем": "Рекомендуем",
+  "Назад к списку": "Назад к списку"
 }
