add create, edit page routes

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -38,5 +38,9 @@
   "Айти": "Айти",
   "Наука": "Наука",
   "Все": "Все",
-  "Все статьи": "Все статьи"
+  "Все статьи": "Все статьи",
+  "Редактирование статьи с ID = ": "Редактирование статьи с ID = ",
+  "Создание новой статьи": "Создание новой статьи",
+  "Project App": "Project App",
+  "Создать статью": "Создать статью"
 }
