add rtk query api, inject article recommentdations, big refactoring

--- a/public/locales/en/profile.json
+++ b/public/locales/en/profile.json
@@ -12,5 +12,6 @@
   "Аватар": "Avatar",
   "Имя пользователя": "Username",
   "Валюта": "Currency",
-  "Страна": "Country"
+  "Страна": "Country",
+  "Профиль не найден": "Профиль не найден"
 }
