--- a/public/locales/ru/profile.json
+++ b/public/locales/ru/profile.json
@@ -12,5 +12,6 @@
   "Аватар": "Аватар",
   "Имя пользователя": "Имя пользователя",
   "Валюта": "Валюта",
-  "Страна": "Страна"
+  "Страна": "Страна",
+  "Профиль не найден": "Профиль не найден"
 }
