--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -43,5 +43,6 @@
   "Редактирование статьи с ID = ": "Редактирование статьи с ID = ",
   "Создание новой статьи": "Создание новой статьи",
   "Project App": "Project App",
-  "Создать статью": "Создать статью"
+  "Создать статью": "Создать статью",
+  "Ошибка при загрузке статей": "Ошибка при загрузке статей"
 }
