--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -43,5 +43,8 @@
   "Создание новой статьи": "Создание новой статьи",
   "Project App": "Project App",
   "Создать статью": "Создать статью",
-  "Ошибка при загрузке статей": "Ошибка при загрузке статей"
+  "Ошибка при загрузке статей": "Ошибка при загрузке статей",
+  "Админ панель": "Админ панель",
+  "Админка": "Админка",
+  "У вас нет доступа к этой странице": "У вас нет доступа к этой странице"
 }
